Fri May 04 19:52:44 BST 2007  Olly Betts <olly@survex.com>

	* omindex.cc,scriptindex.cc: Use new TermGenerator convenience methods
	  which take std::string instead of Utf8Iterator.

Fri May 04 13:32:11 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,makemanpage.in: Use makemanpage to generate
	  manpages.

Fri May 04 13:30:36 BST 2007  Olly Betts <olly@survex.com>

	* commonhelp.cc: Add missing full stop in description of --stemmer.

Fri May 04 04:10:23 BST 2007  Olly Betts <olly@survex.com>

	* query.cc: Explicitly include stdlib.h since we use atoi().

Thu May 03 15:16:31 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am,indextext.cc,indextext.h,omindex.cc,scriptindex.cc:
	  Update to use new TermGenerator class.

Thu May 03 04:03:35 BST 2007  Olly Betts <olly@survex.com>

	* ./: Update svn:externals to pull rev8430 of xapian-core's common
	  subdirectory.
	* scriptindex.cc: Remove sleep() wrapper.

Wed May 02 03:26:38 BST 2007  Olly Betts <olly@survex.com>

	* docs/omegascript.txt,query.cc: Removed $freqs as it has been
	  deprecated for ages.

Wed May 02 03:19:18 BST 2007  Olly Betts <olly@survex.com>

	* docs/scriptindex.txt: Explicitly note that index=nopos is deprecated
	  (scriptindex already emits a warning).

Wed May 02 03:17:03 BST 2007  Olly Betts <olly@survex.com>

	* docs/cgiparams.txt: FMT isn't limited to just `a-z' - the
	  actual restriction is that it may not contain `..'.

Wed May 02 03:02:53 BST 2007  Olly Betts <olly@survex.com>

	* scriptindex.cc: Remove -q and -u options - they no longer do
	  anything and are only accepted for compatibility with really old
	  versions (0.6.1 and earlier and 0.7.5 and earlier respectively).

Wed Apr 25 21:47:48 BST 2007  Olly Betts <olly@survex.com>

	* Makefile.am: omega doesn't need indextext.cc.

Wed Apr 25 21:46:25 BST 2007  Olly Betts <olly@survex.com>

	* query.cc: Remove unused `#include "indextext.h"'.

Wed Apr 25 02:37:15 BST 2007  Olly Betts <olly@survex.com>
