@@ -15,7 +15,7 @@ URL: http://www.xapian.org/
 Requires: xapian-core-libs = %{version}, webserver
 BuildRequires: xapian-core-devel = %{version}
 BuildRequires: autoconf automake libtool
-Source0: http://www.oligarchy.co.uk/xapian/%{version}/omega-%{version}.tar.gz
+Source0: http://www.oligarchy.co.uk/xapian/%{version}/%{name}-%{version}.tar.gz
 Buildroot: %{_tmppath}/%{name}-%{version}-%{release}-root
 
 %description
@@ -23,7 +23,7 @@ Omega is a CGI application which uses the Xapian Information Retrieval
 library to index and search collections of documents.
 
 %prep
-%setup -q -n omega-%{version}
+%setup -q
 
 %build
 # FC6 (at least) has a patched libtool which knows not to set rpath for
@@ -41,7 +41,7 @@ mkdir -p %{buildroot}
 %makeinstall
 # CGI application
 mkdir -p %{buildroot}/var/www/cgi-bin/
-mv %{buildroot}%{_libdir}/omega/bin/omega %{buildroot}/var/www/cgi-bin
+mv %{buildroot}%{_libdir}/xapian-omega/bin/omega %{buildroot}/var/www/cgi-bin
 # Create /var directories
 mkdir -p %{buildroot}%{contentdir}/omega/data
 mkdir -p %{buildroot}%{contentdir}/omega/cdb
