@@ -1,3 +1,11 @@
+Sun May 06 15:52:08 BST 2007  Olly Betts <olly@survex.com>
+
+	* Makefile.am,configure.ac,omega.spec.in,xapian-omega.spec.in:
+	  Update RPM spec file to reflect tarball name change from omega
+	  to xapian.omega (patch from Fabrice Colin).  Also rename omega.spec
+	  to xapian-omega.spec (rpmbuild looks for any .spec file, but it's
+	  more consistent to keep the names in step).
+
 Fri May 04 19:52:44 BST 2007  Olly Betts <olly@survex.com>
 
 	* omindex.cc,scriptindex.cc: Use new TermGenerator convenience methods
